<resources>
    <string name="_delay_return_receipt_date">반환일자</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="account_ars_msg">확인 버튼을 누르면 입력한 번호로 \n전화가 연결됩니다.</string>
    <string name="account_ars_re_verification">ARS 재인증</string>
    <string name="account_ars_verification_content">통화 종료 후 \n\'확인\' 버튼을 누르면 인증이 완료됩니다. \n\n통화가 수신되지 않거나 \n통신사/휴대폰 번호를 변경해야 할 경우 ARS 재인증 버튼을 눌러주세요.</string>
    <string name="accumulating_ktx_mileage_message">승차권 구매회원이 나(동행자)의 승차권을 함께 구매한 경우 승차 종료일 다음날부터 별도로 KTX마일리지 적립신청이 가능합니다.</string>
    <string name="accumulating_ktx_mileage_message_detail">\n※ 마일리지 적립 제한 : 비회원 예매, 1일 4회 초과 적립, 동일 열차 2회 이상 적립 시, 할인 승차권</string>
    <string name="accumulating_ktx_mileage_message_instead">승차권 구매회원이 동행자의 승차권을 함께 구매한 경우 승차 종료일 다음날부터 동행자의 KTX마일리지를 대신 적립 신청할 수 있습니다.(동행자에게 적립)</string>
    <string name="accumulating_ktx_mileage_request_reservation_name">구매자명을 입력해주세요</string>
    <string name="accumulating_ktx_mileage_request_reservation_name_instead">동행자명을 입력해주세요</string>
    <string name="accumulating_ktx_mileage_request_return_no">승차권번호는 최소 16자리 이상입니다.</string>
    <string name="accumulating_ktx_mileage_title">적립 신청 시 유의사항</string>
    <string name="add_discount_message1">추가로 할인 가능한 항목이 있는 경우 할인을 적용해 주세요.\n추가 할인은 어른/청소년 기준, 예매한 매수만큼 적용할 수 있습니다. \n\n경증 : 장애의 정도가 심하지 않은 장애인(구 4-6급) \n중증 : 장애의 정도가 심한 장애인(구 1-3급)</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_name">코레일톡</string>
    <string name="app_version">null</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="applied_resident_registration_number">이미 인증된 주민번호 입니다.</string>
    <string name="authorities">com.h2osystech.smartalimi.ServiceAlimiData.korail</string>
    <string name="auto_login_fail_message">자동로그인이 실패하였습니다. 다시 로그인해주시기 바랍니다.</string>
    <string name="basic_notification_setting_adapted_time">설정을 변경한 이후 발권한 승차권부터 적용됩니다.</string>
    <string name="basic_notification_setting_message">아래와 같은 상황에 알림(PUSH)으로 알려드립니다. \n- 할인쿠폰 발행시\n- 할인쿠폰 이용 만료일 도래 시 \n- KTX특실 업그레이드 서비스</string>
    <string name="basket_items_be_deleted_when_not_pay">장바구니에 담은 후 결제기한이 지난 예약건은 목록에 삭제됩니다.</string>
    <string name="basket_ticket_notice">결제 기한이 지난 상품은 자동으로 목록에서 삭제됩니다. 다건 구입 시, 승차권 예약 내역에서 개별로 추가할인을 적용한 후 결제하시기 바랍니다.</string>
    <string name="booking_1_set_4_seats">1세트(4좌석)</string>
    <string name="booking_adult_1">어른 1명</string>
    <string name="booking_adult_count">어른 %d명</string>
    <string name="booking_close_station_select_slide">역 선택 슬라이드 닫기</string>
    <string name="booking_default_1_possible_warning_one">어른 %1$d명만 예매 가능합니다.</string>
    <string name="booking_departure_date">시작일</string>
    <string name="booking_desc">감소</string>
    <string name="booking_desc_day">일 감소</string>
    <string name="booking_desc_hour">시 감소</string>
    <string name="booking_desc_month">월 감소</string>
    <string name="booking_desc_year">년도 감소</string>
    <string name="booking_direct">직통</string>
    <string name="booking_end_date">종료일</string>
    <string name="booking_etc_count">외 %d명</string>
    <string name="booking_favorite_station">즐겨찾는구간</string>
    <string name="booking_friday">금</string>
    <string name="booking_hour">시</string>
    <string name="booking_inc">증가</string>
    <string name="booking_inc_day">일 증가.</string>
    <string name="booking_inc_hour">시 증가</string>
    <string name="booking_inc_month">월 증가</string>
    <string name="booking_inc_year">년도 증가</string>
    <string name="booking_input_station">역 명의 초성 또는 전체를 입력해 주세요.</string>
    <string name="booking_limit_n_n">최소 %1$d명 - 최대 %2$d명</string>
    <string name="booking_maas_station">이용역</string>
    <string name="booking_major_station">주요역</string>
    <string name="booking_min">분</string>
    <string name="booking_monday">월</string>
    <string name="booking_near_station">가까운역</string>
    <string name="booking_next_month">다음달</string>
    <string name="booking_no_select">미선택</string>
    <string name="booking_passenger_age">승객 연령</string>
    <string name="booking_passengers_and_seats_count">승객 연령 및 좌석수</string>
    <string name="booking_previous_month">이전달</string>
    <string name="booking_recent_station">최근검색구간</string>
    <string name="booking_reverse">출발역과 도착역을 바꿉니다.</string>
    <string name="booking_saturday">토</string>
    <string name="booking_seat_attributes">좌석 속성</string>
    <string name="booking_select_date_in_calendar">달력에서 날짜 선택</string>
    <string name="booking_select_prev_hour_warning">현재 시간 이전은 입력이 불가능합니다.</string>
    <string name="booking_sunday">일</string>
    <string name="booking_tc_dialog_info" formatted="false">변경한 승차권을 환불하실 때는 기존 승차권과 변경한 승차권의 위약금을 비교하여 높은 쪽을 적용합니다.\n예) 기존 승차권의 위약금이 20%이고, 변경한 승차권의 위약금이 5%인 경우 20%적용\n위 내용을 확인하였으며, 승차권을 변경하시겠습니까?</string>
    <string name="booking_tc_dialog_title">이용 동의문</string>
    <string name="booking_tc_notice_info">1. 소지한 승차권의 출발 3시간 전까지 변경 가능\n2. 먼저 출발하는 열차로 변경하는 경우 30분 전까지도 가능\n ※ 변경범위 : 동일 출발일 범위 내 시각, 좌석, 승객유형\n ※ 변경횟수 : 2회</string>
    <string name="booking_teen_count">청소년 %d명</string>
    <string name="booking_thursday">목</string>
    <string name="booking_total_count">총 %d명</string>
    <string name="booking_tuesday">화</string>
    <string name="booking_use">사용</string>
    <string name="booking_wednesday">수</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="bus_popup">2024.11.1.(금)부터 공항버스 좌석지정제가 시행됨에 따라 11월 공항버스 승차권 예매는 10.11.(금) 이후 오픈예정입니다. 공항버스 이용에 참고하시기 바랍니다.</string>
    <string name="business_trip_coupon_input_pop_message">공무출장증 번호를 직접 입력해주세요.</string>
    <string name="calendar_init_value" />
    <string name="calendar_select_date_rent_car_from">대여시간</string>
    <string name="calendar_select_date_rent_car_to">반납시간</string>
    <string name="call_crew_info">승무원이 고객님께 이동하는데 시간이 소요될 수 있음을 양해하여 주시기 바랍니다.(필요시 이용)</string>
    <string name="call_crew_msg_footer">직접 입력하기(기타)</string>
    <string name="call_crew_msg_footer_hint">서비스 콜은 열차에 승차한 고객만 이용이 가능합니다.\n\n욕설, 비속어, 모욕적 표현 사용 시 서비스콜 이용 제한이 있을 수 있습니다. 서로를 존중하는 언어 사용을 부탁드립니다.\n</string>
    <string name="call_crew_msg_free_seat_hint">자유석 고객만 현재위치를 상세히 입력하여 주시기 바랍니다.(예시: 00호차 00석)</string>
    <string name="call_crew_msg_header">해당사항 선택하기</string>
    <string name="call_crew_msg_location">현재 위치</string>
    <string name="call_crew_select_limit">승무원 요청사항은 최대 1개까지 선택이 가능합니다.</string>
    <string name="call_crew_submit_txt">승무원에게 전송하기 (Send)</string>
    <string name="call_crew_success_msg">요청 전달이 완료 되었습니다.\n승무원이 고객님께 이동하는 시간이 소요 될 수 있습니다.\n양해부탁드립니다.</string>
    <string name="call_notification_answer_action">Answer</string>
    <string name="call_notification_answer_video_action">Video</string>
    <string name="call_notification_decline_action">Decline</string>
    <string name="call_notification_hang_up_action">Hang Up</string>
    <string name="call_notification_incoming_text">Incoming call</string>
    <string name="call_notification_ongoing_text">Ongoing call</string>
    <string name="call_notification_screening_text">Screening an incoming call</string>
    <string name="card_register_message">해당 항목을 체크하시면 발행 완료 후 바로 자주쓰는 카드등록 화면으로 이동합니다.</string>
    <string name="cart_select_message">결제할 상품을 선택하여 주세요.</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="chip_text">Chip text</string>
    <string name="city_point_message">씨티 포인트 사용은 결제 후 신용카드 청구할인으로 진행됩니다. 자세한 사항은 씨티포인트 홈페이지를 참고해 주세요.</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="common_add_btn">추가하기</string>
    <string name="common_add_user">추가 사용자</string>
    <string name="common_back_btn">뒤로가기</string>
    <string name="common_base_user">기본 사용자</string>
    <string name="common_close_btn">열차정보 닫기</string>
    <string name="common_confirm">확인</string>
    <string name="common_drop">탈퇴하기</string>
    <string name="common_drop_cancel">계속 이용</string>
    <string name="common_inquiry_1">조회하기</string>
    <string name="common_menu_btn">메뉴</string>
    <string name="common_password">비밀번호</string>
    <string name="common_previous_history">이전내역</string>
    <string name="common_rail_plus">레일플러스</string>
    <string name="common_refresh_btn">새로고침</string>
    <string name="common_user1">사용자</string>
    <string name="member_check">본인확인 조회</string>
    <string name="member_drop_detail">%1$s 님은</string>
    <string name="member_drop_detail2">코레일 멤버십으로 등록되어 있습니다.</string>
    <string name="member_drop_guide">\n탈퇴하시는 경우 예약 및 결제한 승차권은 취소 되오니, 예약 및 결제한 승차권을 발권 받은 후 탈퇴하시기 바랍니다.\n\n• 지금 탈퇴하시면 코레일 멤버십 회원으로 받을 수 있는 혜택(라운지 이용, 할인 승차권 구매, 여행 정보 수신 등)을 더 이상 이용하실 수 없습니다.\n\n• 지금 탈퇴하시면 예약 및 결제한 승차권을 확인 불가하오니 홈티켓 또는 종이승차권으로 발권받은 후 탈퇴하시기 바랍니다.\n\n• 지금 탈퇴하시면 적립 마일리지 및 쿠폰은 삭제되며 복구되지 않습니다.\n\n이에 동의하실 시, 회원 탈퇴하실 수 있습니다.</string>
    <string name="member_drop_info">※ 홈페이지 비밀번호(8자리 이상)를 입력하여 주십시오.\n\n※ 제공된 본인 확인방법으로 본인확인 절차가 불가능하신 경우 철도고객센터 1588-7788로 문의하여 주시기 바랍니다.</string>
    <string name="member_drop_reason">탈퇴사유</string>
    <string name="member_register_name">이름</string>
    <string name="multi_n_card_add_user">추가 사용자 등록하기</string>
    <string name="multi_n_card_adult_add">1명 추가 가능</string>
    <string name="ticket_delivery_member">회원</string>
    <string name="ticket_delivery_member_division">회원구분</string>
    <string name="ticket_delivery_non_member">비회원</string>
    <string name="trip_qr_auth">･ QR코드 인증지 확인</string>
    <string name="trip_qr_auth_guide">  이용안내 및 대상 상품 확인하기</string>
    <string name="trip_qr_auth_info">･ 별도 지정된 여행상품을 구매한 고객에게만 QR코드\n  인증 할인 혜택이 제공됩니다.</string>
    <string name="trip_qr_auth_info_push">･ 이벤트 대상자에게는 인증 후 익월 중 별도 코레일톡\n  푸시 알림 예정</string>
    <string name="trip_qr_auth_title">지역사랑 철도여행 관광지 인증 안내</string>
</resources>