<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <View
        android:id="@+id/weeksTitleStartLine"
        android:background="#000000"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_marginBottom="7dp"
        android:layout_alignLeft="@+id/weeksTitleContainer"
        android:layout_alignRight="@+id/weeksTitleContainer"
        android:alpha="0.07"/>
    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/weeksTitleContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/weeksTitleStartLine"
        android:layout_centerHorizontal="true">
        <com.korail.talk.view.CTextView
            android:textSize="16dp"
            android:textColor="#fff04922"
            android:gravity="center"
            android:layout_width="43dp"
            android:layout_height="wrap_content"
            android:text="@string/booking_sunday"/>
        <com.korail.talk.view.CTextView
            android:textSize="16dp"
            android:textColor="@color/ocean_blue"
            android:gravity="center"
            android:layout_width="43dp"
            android:layout_height="wrap_content"
            android:text="@string/booking_monday"/>
        <com.korail.talk.view.CTextView
            android:textSize="16dp"
            android:textColor="@color/ocean_blue"
            android:gravity="center"
            android:layout_width="43dp"
            android:layout_height="wrap_content"
            android:text="@string/booking_tuesday"/>
        <com.korail.talk.view.CTextView
            android:textSize="16dp"
            android:textColor="@color/ocean_blue"
            android:gravity="center"
            android:layout_width="43dp"
            android:layout_height="wrap_content"
            android:text="@string/booking_wednesday"/>
        <com.korail.talk.view.CTextView
            android:textSize="16dp"
            android:textColor="@color/ocean_blue"
            android:gravity="center"
            android:layout_width="43dp"
            android:layout_height="wrap_content"
            android:text="@string/booking_thursday"/>
        <com.korail.talk.view.CTextView
            android:textSize="16dp"
            android:textColor="@color/ocean_blue"
            android:gravity="center"
            android:layout_width="43dp"
            android:layout_height="wrap_content"
            android:text="@string/booking_friday"/>
        <com.korail.talk.view.CTextView
            android:textSize="16dp"
            android:textColor="#159aff"
            android:gravity="center"
            android:layout_width="43dp"
            android:layout_height="wrap_content"
            android:text="@string/booking_saturday"/>
    </LinearLayout>
    <View
        android:id="@+id/weeksTitleEndLine"
        android:background="#000000"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="7dp"
        android:layout_below="@+id/weeksTitleContainer"
        android:layout_alignLeft="@+id/weeksTitleContainer"
        android:layout_alignRight="@+id/weeksTitleContainer"
        android:alpha="0.07"/>
    <androidx.core.widget.NestedScrollView
        android:id="@+id/weeksContainerScroll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/weeksTitleEndLine"
        android:layout_centerHorizontal="true"
        style="@style/ScrollbarBlue">
        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/weeksContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </androidx.core.widget.NestedScrollView>
</RelativeLayout>
