<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">
        <com.korail.talk.view.CTextView
            android:textSize="17dp"
            android:textStyle="bold"
            android:textColor="#cc000000"
            android:id="@+id/tv_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"
            android:text="@string/member_drop_detail"/>
        <com.korail.talk.view.CTextView
            android:textSize="17dp"
            android:textColor="#cc000000"
            android:id="@+id/tv_detail2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:text="@string/member_drop_detail2"/>
        <com.korail.talk.view.CTextView
            android:textSize="17dp"
            android:textColor="#cc000000"
            android:id="@+id/tv_guide"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:text="@string/member_drop_guide"
            android:lineSpacingExtra="3dp"/>
        <LinearLayout
            android:orientation="horizontal"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp">
            <com.korail.talk.view.CTextView
                android:textSize="15dp"
                android:textColor="#cc000000"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/member_drop_reason"/>
            <com.korail.talk.view.CEditText
                android:id="@+id/et_id"
                android:layout_marginLeft="16dp"
                style="@style/BlueEditText"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.korail.talk.view.CButton
            android:id="@+id/btn_bottom"
            android:text="@string/common_drop"
            android:layout_weight="1"
            style="@style/ButtonBottomBlue"/>
        <View
            android:background="@color/cloudy_blue"
            android:layout_width="1dp"
            android:layout_height="match_parent"/>
        <com.korail.talk.view.CButton
            android:id="@+id/btn_bottom_cancel"
            android:text="@string/common_drop_cancel"
            android:layout_weight="1"
            style="@style/ButtonBottomBlue"/>
    </LinearLayout>
</LinearLayout>
