<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="15dp"
    android:layout_marginRight="15dp">
    <com.korail.talk.view.CTextView
        android:textSize="14dp"
        android:textColor="#0066b3"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/common_user1"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">
        <com.korail.talk.view.CTextView
            android:textSize="14dp"
            android:textColor="@color/brownish_grey"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/common_base_user"
            android:layout_weight="1"/>
        <com.korail.talk.view.CTextView
            android:textSize="14dp"
            android:textColor="@color/brownish_grey"
            android:id="@+id/tv_add_passenger_base_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp">
        <com.korail.talk.view.CTextView
            android:textSize="14dp"
            android:textColor="@color/brownish_grey"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/common_add_user"
            android:layout_weight="1"/>
        <com.korail.talk.view.CTextView
            android:textSize="14dp"
            android:textColor="@color/tomato"
            android:id="@+id/tv_add_passenger_add_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/multi_n_card_adult_add"/>
    </LinearLayout>
    <com.korail.talk.view.CButton
        android:textSize="14dp"
        android:textColor="@color/marine"
        android:id="@+id/btn_add_passenger_certification"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/multi_n_card_add_user"
        android:layout_marginVertical="20dp"
        style="@style/ButtonRoundStrokeGray"/>
</LinearLayout>
