<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <include layout="@layout/appbar"/>
        <com.korail.talk.view.CTextView
            android:textSize="18dp"
            android:textColor="@color/black"
            android:gravity="center"
            android:layout_gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/trip_qr_auth_title"
            android:layout_marginVertical="20dp"/>
        <com.korail.talk.view.CTextView
            android:textSize="15dp"
            android:textColor="@color/peacock_blue"
            android:id="@+id/btn_qr_scan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="18dp"
            android:text="@string/trip_qr_auth"
            android:layout_marginHorizontal="18dp"/>
        <com.korail.talk.view.CTextView
            android:textSize="15dp"
            android:textColor="@color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="18dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="18dp"
            android:text="@string/trip_qr_auth_info"
            android:layout_marginHorizontal="18dp"/>
        <com.korail.talk.view.CTextView
            android:textSize="15dp"
            android:textColor="@color/peacock_blue"
            android:id="@+id/btn_qr_guide"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="18dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="18dp"
            android:text="@string/trip_qr_auth_guide"
            android:layout_marginHorizontal="18dp"/>
        <com.korail.talk.view.CTextView
            android:textSize="15dp"
            android:textColor="@color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="18dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="18dp"
            android:text="@string/trip_qr_auth_info_push"
            android:layout_marginHorizontal="18dp"/>
        <LinearLayout
            android:gravity="bottom"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <com.korail.talk.view.CButton
                android:id="@+id/btn_trip_confirm"
                android:text="@string/common_confirm"
                style="@style/ButtonBottomBlue"/>
        </LinearLayout>
    </LinearLayout>
    <FrameLayout
        android:layout_gravity="right"
        android:orientation="vertical"
        android:id="@+id/naviMenuContainer"
        android:background="#fffafafa"
        android:layout_width="310dp"
        android:layout_height="match_parent"/>
</androidx.drawerlayout.widget.DrawerLayout>
