<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:elevation="0dp">
    <ImageButton
        android:id="@+id/backBtn"
        android:background="@null"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="0x7f080110"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:contentDescription="@string/common_back_btn"/>
    <com.korail.talk.view.CTextView
        android:textSize="18dp"
        android:textColor="@color/tabBtnNormal"
        android:ellipsize="end"
        android:gravity="center"
        android:id="@+id/titleTxt"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:layout_centerInParent="true"/>
    <ImageButton
        android:id="@+id/refreshBtn"
        android:background="@null"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="0x7f080185"
        android:layout_toLeftOf="@+id/menuBtn"
        android:layout_centerVertical="true"
        android:layout_alignWithParentIfMissing="true"
        android:contentDescription="@string/common_refresh_btn"/>
    <ImageButton
        android:id="@+id/addBtn"
        android:background="@null"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="0x7f08010f"
        android:layout_toLeftOf="@+id/menuBtn"
        android:layout_centerVertical="true"
        android:layout_alignWithParentIfMissing="true"
        android:contentDescription="@string/common_add_btn"/>
    <ImageButton
        android:id="@+id/railplusBtn"
        android:background="@null"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="0x7f080147"
        android:layout_toLeftOf="@+id/menuBtn"
        android:layout_centerVertical="true"
        android:layout_alignWithParentIfMissing="true"
        android:contentDescription="@string/common_rail_plus"/>
    <ImageButton
        android:id="@+id/closeBtn"
        android:background="@null"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="0x7f080120"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:contentDescription="@string/common_close_btn"/>
    <ImageButton
        android:id="@+id/menuBtn"
        android:background="@null"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="0x7f08012b"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:contentDescription="@string/common_menu_btn"/>
    <ImageView
        android:id="@+id/iv_exist_push"
        android:visibility="gone"
        android:layout_width="7dp"
        android:layout_height="7dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:src="@drawable/bg_circle_main_notification"
        android:layout_alignParentRight="true"/>
</RelativeLayout>
