<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">
        <com.korail.talk.view.CTextView
            android:textSize="20dp"
            android:textColor="#cc000000"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"
            android:text="@string/member_check"/>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp">
            <com.korail.talk.view.CTextView
                android:textSize="15dp"
                android:textColor="#cc000000"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/member_register_name"/>
            <com.korail.talk.view.CEditText
                android:id="@+id/et_id"
                android:layout_marginLeft="16dp"
                style="@style/BlueEditText"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp">
            <com.korail.talk.view.CTextView
                android:textSize="15dp"
                android:textColor="#cc000000"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/common_password"/>
            <com.korail.talk.view.CEditText
                android:id="@+id/et_password"
                android:layout_marginLeft="16dp"
                android:inputType="textPassword"
                style="@style/BlueEditText"/>
        </LinearLayout>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="14dp"
            android:src="@drawable/dot_divider"
            android:layerType="software"/>
        <com.korail.talk.view.CTextView
            android:textSize="14dp"
            android:textColor="#666666"
            android:padding="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/member_drop_info"/>
    </LinearLayout>
    <com.korail.talk.view.CButton
        android:id="@+id/btn_bottom"
        android:text="@string/common_inquiry_1"
        style="@style/ButtonBottomBlue"/>
</LinearLayout>
