<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="14dp"
        android:layout_marginRight="14dp"
        android:layout_marginHorizontal="14dp">
        <com.korail.talk.view.CTextView
            android:textSize="15dp"
            android:textColor="#cc000000"
            android:layout_width="84dp"
            android:layout_height="wrap_content"
            android:text="@string/ticket_delivery_member_division"/>
        <RadioGroup
            android:orientation="horizontal"
            android:id="@+id/rg_delivery_kt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <com.korail.talk.view.CRadioButton
                android:textSize="15dp"
                android:id="@+id/rb_delivery_kt_member"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/ticket_delivery_member"
                style="@style/BlueRadioButtonWithText"/>
            <com.korail.talk.view.CRadioButton
                android:textSize="15dp"
                android:id="@+id/rb_delivery_kt_non_member"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:text="@string/ticket_delivery_non_member"
                style="@style/BlueRadioButtonWithText"/>
        </RadioGroup>
        <com.korail.talk.view.CButton
            android:textSize="14dp"
            android:textColor="#3e3e3e"
            android:layout_gravity="center_vertical"
            android:id="@+id/btn_delivery_kt_history"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/common_previous_history"
            style="@style/ButtonRoundStrokeGray"/>
    </LinearLayout>
    <com.korail.talk.view.CustomViewPager
        android:id="@+id/vp_delivery_kt"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="16dp"/>
</LinearLayout>
